added markdown plugin

--- a/src/utils/custom-variables.scss
+++ b/src/utils/custom-variables.scss
@@ -15,7 +15,7 @@
 $enable-shadows: true;
 //$enable-gradients: true;
 
-$link-decoration: underline;
+//$link-decoration: underline;
 
 // Changing the body background and text
 //$body-bg: #d3e9eb;
@@ -25,7 +25,7 @@ $link-decoration: underline;
 $border-radius: 2px;
 
 // Changing the theme colors
-$primary: #aa7d1c;
+$primary: #002d42;
 $secondary: #4d5d6c;
 $success: #278400;
 $info: #269abc;
