--- a/src/utils/custom-variables.scss
+++ b/src/utils/custom-variables.scss
@@ -25,7 +25,7 @@ $enable-shadows: true;
 $border-radius: 2px;
 
 // Changing the theme colors
-$primary: #002d42;
+$primary: #e79a0a;
 $secondary: #4d5d6c;
 $success: #278400;
 $info: #269abc;
