--- a/src/utils/custom-variables.scss
+++ b/src/utils/custom-variables.scss
@@ -22,7 +22,7 @@ $enable-shadows: true;
 //$body-color: #151417;
 
 // Changing the border radius of buttons
-$border-radius: 2px;
+//$border-radius: 2px;
 
 // Changing the theme colors
 $primary: #0d7fac;
@@ -73,6 +73,7 @@ $dropdown-padding-y: 0;
 $dropdown-link-hover-bg: #e6e6e6;
 
 $dropdown-item-padding-y: .5rem;
+
 // Adding (!) an additional theme color (ex. classes btn-cool, bg-cool)
 //$theme-colors: (
 //  "cool": #4d3fa3
