--- a/src/utils/custom-styles.scss
+++ b/src/utils/custom-styles.scss
@@ -6,7 +6,7 @@
 @each $color, $value in $theme-colors {
     .alert-#{$color} {
       color: $black;
-     box-shadow: $box-shadow-sm;
+     box-shadow: $dropdown-box-shadow;
     }
   
     .alert-icon.alert-#{$color} {
@@ -28,45 +28,254 @@
       .alert-icon.alert-dismissible .message{
           padding: $alert-padding-y 4rem $alert-padding-y $alert-padding-x;
       }
+}
+  
+.alert-icon-border {
+    background-color: $white;
+}
+
+//Forms
+
+.form-control {
+    border-radius: $border-radius-sm;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 35px;
+    height: 21px;
   }
   
-  .alert-icon-border {
-      background-color: $white;
+  .switch input {display:none;}
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border: 2px solid #666666;
   }
   
-  //Cards
-  
-  .card {
-      box-shadow: $box-shadow-sm;
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 1px;
+    bottom: 1px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
   }
   
-  .card-header, .card-footer {
-      background: transparent;
-      margin: 0 $card-spacer-x;
-      padding: $card-spacer-y 0;
+  input:checked + .slider {
+    background-color: #FEC04F;
   }
   
-  a .card {
-      text-decoration: none;
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
   }
   
-  //Menus
-  
-  a.dropdown-item {
-      text-decoration: none;
+  input:checked + .slider:before {
+    -webkit-transform: translateX(14px);
+    -ms-transform: translateX(14px);
+    transform: translateX(14px);
   }
   
-  .dropdown-divider {
-      margin:0;
-  }
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+    }							
   
-  //Helper Classes
-  
-  .bd-example {
-      position: relative;
+  .slider.round:before {
+    border-radius: 50%;
   }
+
+
+//Cards
   
-  .bd-example>.dropdown-menu:first-child {
-      position: static;
-      display: block;
+.card {
+    box-shadow: $dropdown-box-shadow;
+    border-radius: $border-radius-lg;
+}
+  
+.card-header, .card-footer {
+    background: transparent;
+    margin: 0 $card-spacer-x;
+    padding: $card-spacer-y 0;
+}
+  
+a .card {
+    text-decoration: none;
+}
+
+.card-profile {
+    display: flex;
+}
+
+.card-profile .card-body {
+    flex: 1;
+}
+
+.card-profile .avatar {
+    margin-top: -70px;
+    width: 90px;
+    height: 90px;
+}
+  
+//Menus
+.dropdown-menu {
+    border-radius: $border-radius-sm;
+}  
+a.dropdown-item {
+    text-decoration: none;
+}
+  
+.dropdown-divider {
+    margin:0;
+}
+
+//Navbars
+
+.navbar a {
+    text-decoration: none !important;
+}
+
+.navbar-brand {
+    margin-right: 3rem;
+}
+
+.navbar-light .nav-item:hover {
+    background-color: $gray-200;
+    border-radius: $border-radius;
+}
+
+.navbar-light .nav-item.active {
+    background-color: $gray-200;
+    border-radius: $border-radius;
+}
+
+.navbar-dark .nav-item.active {
+    background-color: rgba(255,255,255, 0.15);
+    border-radius: $border-radius;
+}
+
+.navbar-dark .nav-item:hover {
+    background-color: rgba(255,255,255, 0.15);
+    border-radius: $border-radius;
+}
+
+//Nav Tabs
+
+.nav-tabs .nav-link {
+    text-decoration: none;
+    padding: $nav-link-padding-y $nav-link-padding-x .2rem $nav-link-padding-x;
+}
+
+.nav-tabs .nav-link.active {
+    font-weight: bold;
+}
+  
+//Modals
+.modal-header, .modal-footer {
+    border: none;
+}
+
+//Helper Classes
+  
+.bd-example {
+    position: relative;
+}
+  
+.bd-example>.dropdown-menu:first-child {
+    position: static;
+    display: block;
+}
+
+//Avatars
+
+.avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: $border-radius-sm;
+    background: #F7F9FA;
+    color: #fff;
+}
+
+.avatar.avatar-sm {
+    width: 26px;
+    height: 26px; 
+}
+
+.avatar.avatar-lg {
+    width: 115px;
+    height: 115px;
+}
+
+.media .avatar {
+    margin-right: 15px;
+}
+
+//Media
+
+.media.media-comment {
+    margin: 1rem 0;
+}
+.media .media-footer {
+    margin-top: 5px;
+}
+
+.media.media-nested-comment {
+    margin: 0.75rem 0;
+    border-left: 1px solid $primary;
+    padding-left: 1rem;
+}
+
+//Tags / Badges
+
+.badge-tag {
+    position: relative;
+    padding-left: 16px;
+    padding-bottom: 6px;
+    margin-left: 10px;
+}
+
+.badge-tag::before {
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+    content: '';
+    height: 6px;
+    left: 3px;
+    position: absolute;
+    width: 6px;
+    top: 10px; 
+}
+
+.badge-tag::after {
+    border-bottom: 13px solid transparent;
+    border-right: 10px solid #2C73A1;
+    border-top: 13px solid transparent;
+    content: '';
+    position: absolute;
+    left: -8px;
+    top: 0;
+    width: 0;
+    height: 0;
+    border-radius: 20px;
   }
+
+  //Table
+
+  .table thead th {
+      border-bottom: 3px solid #96A8B2;
+      border-top: none;
+  }
+
+  
