--- a/src/utils/custom-variables.scss
+++ b/src/utils/custom-variables.scss
@@ -15,24 +15,27 @@
 $enable-shadows: true;
 //$enable-gradients: true;
 
-//$link-decoration: underline;
+$link-decoration: none;
 
 // Changing the body background and text
 //$body-bg: #d3e9eb;
 //$body-color: #151417;
 
 // Changing the border radius of buttons
-$border-radius: 2px;
+$border-radius: .35rem;
+$border-radius-lg: .5rem;
 
 // Changing the theme colors
-$primary: #e79a0a;
-$secondary: #4d5d6c;
+$primary: #2C73A1;
+$secondary: #0ba7b4;
 $success: #278400;
 $info: #269abc;
 $warning: #ff9900;
 $danger: #d3080c;
 $light: #FFFFFF;
 //$dark: #0f1319;
+
+$body-bg: #FAFAFA;
 
 //Alerts
 $alert-bg-level: -12;
@@ -42,7 +45,7 @@ $alert-bg-level: -12;
 $input-border-color: #CCCCCC;
 $input-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
 $input-focus-border-color: #269abc;
-$input-focus-box-shadow: none;
+$input-focus-box-shadow: 0px 0px 2px rgba(38, 154, 188, 0.7);
 
 $label-margin-bottom: 0.2rem;
 
@@ -50,6 +53,10 @@ $custom-checkbox-indicator-icon-checked: white;
 $custom-checkbox-indicator-icon-indeterminate: none;
 $custom-checkbox-indicator-indeterminate-color: white;
 
+//Badges
+
+$badge-font-size: 100%;
+$badge-font-weight: normal;
 
 //Buttons
 
@@ -62,17 +69,45 @@ $breadcrumb-divider: quote(">");
 //Cards
 
 $card-spacer-x: 0.75rem;
+$card-border-width: 0px;
 
 //Dropdowns
 
 $dropdown-border-color: #cccccc;
-$dropdown-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
+$dropdown-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
 $dropdown-divider-bg:  #d7d7d7;
 $dropdown-padding-y: 0;
 
 $dropdown-link-hover-bg: #e6e6e6;
 
 $dropdown-item-padding-y: .5rem;
+
+//Modals
+
+$modal-content-border-radius: 2px;
+
+
+//Navbar
+
+$navbar-nav-link-padding-x: .75rem;
+$navbar-light-color: black;
+$navbar-light-hover-color: black;
+$navbar-dark-color: white;
+$navbar-dark-hover-color: white;
+
+//Tabs
+
+$nav-tabs-border-color: #cccccc;
+$nav-tabs-border-width: 2px;
+$nav-tabs-link-active-border-color: transparent transparent #002d42;
+$nav-tabs-link-hover-border-color: transparent transparent #002d42;
+
+//Tables
+
+$table-border-color: #96A8B2;
+$table-hover-bg: #F2F5F6;
+$table-accent-bg: #F2F5F6;
+
 // Adding (!) an additional theme color (ex. classes btn-cool, bg-cool)
 //$theme-colors: (
 //  "cool": #4d3fa3
