first search bar implementation

--- a/src/utils/custom-styles.scss
+++ b/src/utils/custom-styles.scss
@@ -282,7 +282,7 @@ a.dropdown-item {
     padding-top: 75px; 
   }
 
-  .list-group-item {
-    border: 0px solid rgba(0, 0, 0, 0.125);
-}
+  /* .list-group-item {
+      border: 0px solid rgba(0, 0, 0, 0.125);
+} */
 
