--- a/src/components/sidenav.scss
+++ b/src/components/sidenav.scss
@@ -1,17 +1,20 @@
 #sidenav{
     background-color: #F2F7F7;
     display: inline-block;
-    min-width: 300px;
+    max-width: 300px;
+    width:100%;
     border-right: 1px solid;
     border-color: #D3D3D3;
     margin-left: 0px !important;
-    position: absolute; 
+    position: fixed;
     bottom: 0;
+    left: 0;
     top: 0;
     min-height: 100vh;
+    overflow-y: auto;
 }
 #title{ //#h2?
-    margin-top: 30px;
+    margin-top: 16px;
     margin-left: 25px;
     margin-bottom: 10px !important;
     font-family: 'Rubik', sans-serif;
