--- a/src/components/sidenav.scss
+++ b/src/components/sidenav.scss
@@ -1,5 +1,5 @@
 #sidenav{
-    background-color: #F2F7F7;
+    background-color: #FAFAFA;
     display: inline-block;
     max-width: 300px;
     width:100%;
