--- a/src/components/subnav.scss
+++ b/src/components/subnav.scss
@@ -1,24 +1,41 @@
-#listGroupItem{ //#h5?
-    color: black !important;
-    background-color:#F2F7F7 !important;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    letter-spacing: .5px;
-    font-size: 1.125em;
-    font-family: 'Nunito Sans', sans-serif;
-    margin-left: 20px;
-    margin-bottom: 5px;
-    font-weight: 400;
-    #link{
-        width: 100%;
-        color: black;
-        font-family: 'Roboto', sans-serif;
-        margin-left: 5px;
-    }
+.collapseItem {
+  width:100%;
+  background-color:transparent !important;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  letter-spacing: .5px;
+  font-size: 1.125em;
+  font-family: 'Nunito Sans', sans-serif;
+  margin-left: 20px;
+  margin-bottom: 5px;
+  font-weight: 400;
+  border:0 !important;
+  padding: .2rem 0 .2rem 1rem !important;
 }
-.active#listGroupItem{
-    margin-left: 40px;
-    background-color: #467B8D !important;
-    padding-left: 10px !important;
-    border-radius: 0px;
+.collapseItem>a {
+  color:black;
+  width:100%;
+  display:block;
+}
+.subItem {
+  padding:0 !important;
+  background-color:transparent !important;
+}
+
+.subLink {
+  font-size:1.025em;
+  color:black;
+  display:block;
+  width:100%;
+  padding: .25rem 0 .25rem 1rem;
+}
+.subLink:hover {
+  color:black;
+  text-decoration: none;
+  background-color:rgba(70, 123, 141, 0.3);
+}
+.subLink:focus {
+  color:black;
+  text-decoration: none;
+  background-color:rgba(70, 123, 141, 0.5);
 }
