--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -27,4 +27,13 @@
     flex-wrap: nowrap !important;
     margin: 0 !important;
 }
+}
+
+@media (max-width: 815px) { 
+    .nav-site {
+        .nav-link {
+            padding: 8px 10px;
+            
+        }
+    }
  }
