--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -14,3 +14,15 @@
         padding-left: 0px;
     }
 }
+
+.hero-holder {
+    background-image: url(https://raw.githubusercontent.com/gctools-outilsgc/design-system/master/project_mgmt/Aurora-Banner-large.png);
+    background-size: cover;
+    height: 795px;
+}
+
+.footer-holder {
+    background-image: url(https://raw.githubusercontent.com/gctools-outilsgc/design-system/master/project_mgmt/Aurora-Banner-small.png);
+    background-size: cover;
+    height: 300px;
+}
