start of a11y tweaks regions + lang toggle + skip link

--- a/src/utils/custom-styles.scss
+++ b/src/utils/custom-styles.scss
@@ -416,3 +416,10 @@ a.ext-link-text {
     vertical-align: middle;
     font-family: 'Nunito', sans-serif;
 }
+
+.aurora-skip {
+    left: 45%;
+    background-color: $primary;
+    padding: 5px;
+    color: white;
+}
