--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -12,14 +12,39 @@
 @media (max-width: 768px) { 
     .doc-container {
         padding-left: 0px;
+        margin-top: 60px !important;
     }
 }
 
 .hero-holder {
     background-image: url(https://raw.githubusercontent.com/gctools-outilsgc/design-system/master/project_mgmt/Aurora-Banner-large.png);
     background-size: cover;
-    height: 795px;
+    height: 695px;
+    .lead {
+        max-width: 75%;
+    }
 }
+
+.home-body { 
+    margin-top: -100px;    
+}
+
+@media (max-width: 768px) {
+    .hero-holder {
+        background-size: contain;
+        height: 645px;
+        background-position-x: 280px;
+        background-position-y: 195px;
+        background-repeat: no-repeat;
+        .lead {
+            max-width: 100%;
+        }
+    }
+    .home-body { 
+        margin-top: 110px;
+    }
+    
+ }
 
 .footer-holder {
     background-image: url(https://raw.githubusercontent.com/gctools-outilsgc/design-system/master/project_mgmt/Aurora-Banner-small.png);
