--- a/src/components/sidenav.scss
+++ b/src/components/sidenav.scss
@@ -28,6 +28,7 @@
         z-index:9999;
         .nav {
             margin-top: 0 !important;
+            margin-bottom: 200px !important;
         }
     }
 }
