--- a/src/components/sidenav.scss
+++ b/src/components/sidenav.scss
@@ -24,10 +24,11 @@
 
 @media (max-width: 768px) { 
     .mobile-sidebar #sidenav {
-        top: 162px !important;
+        top: 154px !important;
         z-index:9999;
         .nav {
             margin-top: 0 !important;
+            margin-bottom: 200px !important;
         }
     }
 }
