Added overlay to toggle off mobile sidenav

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -48,6 +48,16 @@
     }
 }
 
+.ui-mask {
+  z-index:10;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  background-color: rgba(0,0,0,.4);
+  position:fixed;
+}
+
 @media (max-width: 768px) {
     .hero-holder {
         background-size: contain;
