--- a/src/utils/custom-styles.scss
+++ b/src/utils/custom-styles.scss
@@ -381,6 +381,12 @@ a.dropdown-item {
         }
     }
 
+  //Secondary Buttons 
+
+  .btn-secondary {
+    @include button-outline-variant($primary);
+  }
+
 /* ADDED FOR DS*/
 
 h1, h2, h3, h4, h5, h6, p {
