--- a/src/utils/custom-variables.scss
+++ b/src/utils/custom-variables.scss
@@ -26,8 +26,8 @@ $border-radius: .35rem;
 $border-radius-lg: .5rem;
 
 // Changing the theme colors
-$primary: #2C73A1;
-$secondary: #0ba7b4;
+$primary: #002D42;
+$secondary: #002D42;
 $success: #278400;
 $info: #269abc;
 $warning: #ff9900;
