subnav active was rewritten

--- a/src/components/subnav.scss
+++ b/src/components/subnav.scss
@@ -39,3 +39,7 @@
   text-decoration: none;
   background-color:rgba(70, 123, 141, 0.5);
 }
+.active-nav {
+  color: white !important;
+  background-color: #467B8D !important;
+}
