--- a/src/layouts/layout.scss
+++ b/src/layouts/layout.scss
@@ -9,7 +9,7 @@
   padding-left: 310px;
 }
 
-@media (max-width: 768px) { 
+@media (max-width: 768px) {
   .doc-container {
       padding-left: 0px;
       margin-top: 60px !important;
@@ -34,41 +34,67 @@
   }
 }
 
-.home-body { 
-  margin-top: -100px;    
-}
-
-@media (max-width: 768px) {
-  .hero-holder {
-      background-size: contain;
-      height: 645px;
-      background-position-x: 280px;
-      background-position-y: 195px;
-      background-repeat: no-repeat;
-      .lead {
-          max-width: 100%;
-      }
-      padding: 0px;
-  }
-  .home-body { 
-      margin-top: 6px;
-  }
-  
+.home-body {
+  margin-top: -100px;
 }
 
 .footer-holder {
   background-image: url(https://raw.githubusercontent.com/gctools-outilsgc/design-system/master/project_mgmt/Aurora-Banner-small.png);
   background-size: cover;
   height: 300px;
+  .lead {
+    max-width:50%;
+    float:right;
+  }
 }
-@media (max-width: 576px) { 
+
+.ui-mask {
+z-index:10;
+top:0;
+bottom:0;
+left:0;
+right:0;
+background-color: rgba(0,0,0,.4);
+position:fixed;
+}
+
+@media (max-width: 768px) {
+  .hero-holder {
+      background-size: contain;
+      height: 535px;
+      background-position-x: 280px;
+      background-position-y: 195px;
+      background-repeat: no-repeat;
+      .lead {
+          max-width: 100%;
+      }
+      .container {
+        margin-top:20px;
+      }
+      padding: 0px;
+  }
+  .home-body {
+      margin-top: 40px;
+  }
+
+  .footer-holder {
+      background-image: none;
+      .lead {
+        max-width:100%;
+      }
+  }
+
+}
+
+
+@media (max-width: 576px) {
 .scroll {
   white-space: nowrap;
   overflow-x: auto;
   overflow-y: hidden;
   height: 44px;
   -webkit-overflow-scrolling: touch;
-  -ms-overflow-style: -ms-autohiding-scrollbar; 
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
 .scroll::-webkit-scrollbar {
@@ -77,21 +103,35 @@
 
 .main-nav {
   .nav-holder {
-    width: 60%; 
+    width: 60%;
   }
   .nav {
   flex-wrap: nowrap !important;
   margin: 0 !important;
   }
 }
-
+.hero-holder {
+  background-image:none;
+  height:auto;
+  .lead {
+    font-size:1.1rem;
+  }
+}
+.footer-holder {
+  .lead {
+    font-size:1.1rem;
+  }
+}
+.doc-container {
+    padding-left: 15px;
+}
 }
 
-@media (max-width: 815px) { 
+@media (max-width: 815px) {
   .nav-site {
       .nav-link {
           padding: 8px 10px;
-          
+
       }
   }
 }
