--- a/src/utils/custom-variables.scss
+++ b/src/utils/custom-variables.scss
@@ -108,6 +108,9 @@ $table-border-color: #96A8B2;
 $table-hover-bg: #F2F5F6;
 $table-accent-bg: #F2F5F6;
 
+//links
+$link-color:#0278A4;
+
 // Adding (!) an additional theme color (ex. classes btn-cool, bg-cool)
 //$theme-colors: (
 //  "cool": #4d3fa3
