--- a/src/layouts/layout.scss
+++ b/src/layouts/layout.scss
@@ -9,6 +9,18 @@
   padding-left: 310px;
 }
 
+.footer {
+  ul {
+    border-top: 1px solid #CECECE;
+    list-style: none;
+    padding: 15px;
+    li {
+      display: inline-block;
+      margin-right:15px;
+    }
+  }
+}
+
 @media (max-width: 768px) {
   .doc-container {
       padding-left: 15px;
