Better footer style

--- a/src/layouts/layout.scss
+++ b/src/layouts/layout.scss
@@ -7,6 +7,12 @@
 .doc-container {
   max-width: 1250px;
   padding-left: 310px;
+  .foot-container {
+    padding:0;
+  }
+  footer {
+      margin-top:35px;
+  }
 }
 
 .footer {
