First commit with some fixes

--- a/src/utils/custom-styles.scss
+++ b/src/utils/custom-styles.scss
@@ -259,6 +259,12 @@ a.dropdown-item {
     font-weight: bold;
 }
 
+//Nav breadcrumbs
+
+.breadcrumb {
+  background-color: transparent;
+}
+
 //Modals
 .modal-header, .modal-footer {
     border: none;
