Better badge examples

--- a/src/utils/custom-styles.scss
+++ b/src/utils/custom-styles.scss
@@ -360,6 +360,15 @@ a.dropdown-item {
     border-radius: 20px;
   }
 
+.badge-secondary {
+  color: #fff;
+  background-color: #4D5D6C;
+}
+
+.badge-info {
+  background-color:#245269;
+  color:#ffffff;
+}
 
   //Table
 
