--- a/src/utils/custom-styles.scss
+++ b/src/utils/custom-styles.scss
@@ -175,6 +175,43 @@ button.switch {
       }
   }
 
+.custom-control-label::before {
+    top:0.125rem;
+    width: 1.125rem;
+    height:1.125rem;
+    background-color: #f9f9f9;
+    box-shadow: inset 0 0.125rem 0.125rem rgba(0, 0, 0, 0.1);
+    border: 1px solid #96A8B2;
+  }
+
+.custom-checkbox {
+  .custom-control-label::after {
+    top:0.125rem;
+    width: 1.125rem;
+    height:1.125rem;
+    background-size: 80% 80%;
+  }
+}
+
+.custom-radio {
+  .custom-control-label::after {
+    top:0.125rem;
+    left:-1.45rem;
+    width: 1.125rem;
+    height:1.125rem;
+    background-size: 78% 78%;
+  }
+
+  .custom-control-input:checked ~ .custom-control-label::after {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='" + $primary + "'/%3E%3C/svg%3E");
+  }
+
+  .custom-control-input:checked ~ .custom-control-label::before {
+    color:$primary;
+    background-color:transparent;
+  }
+}
+
 //Cards
 
 .card {
