--- a/src/utils/custom-styles.scss
+++ b/src/utils/custom-styles.scss
@@ -86,62 +86,74 @@ button.switch {
     -o-user-select: none;
   }
 
+  .switch {
+    display: inline-flex;
+    align-items: center;
+    margin: 5px 0;
+    position:relative;
 
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 35px;
-    height: 21px;
-  }
-
-  .switch input {display:none;}
-
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-    border: 2px solid #666666;
-  }
-
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 16px;
-    width: 16px;
-    left: 1px;
-    bottom: 1px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-
-  input:checked + .slider {
-    background-color: #FEC04F;
-  }
-
-  input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-
-  input:checked + .slider:before {
-    -webkit-transform: translateX(14px);
-    -ms-transform: translateX(14px);
-    transform: translateX(14px);
-  }
-
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
+    .switch__toggle {
+      cursor: pointer;
+      margin-right: 5px;
     }
 
-  .slider.round:before {
-    border-radius: 50%;
+    .switch__toggle::before,
+    .switch__toggle::after {
+      content: '';
+      background: #E3E4E5;
+      transition: all 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
+      display: block;
+    }
+
+    .switch__toggle::before {
+      height: 1.65em;
+      width: 3em;
+      border-radius: 30px;
+      opacity: 0.6;
+      border:1px solid #666666;
+    }
+
+    .switch__toggle::after {
+      background:white;
+      position: absolute;
+      top: 50%;
+      transform: translate(0, -50%);
+      height: 1.5em;
+      width: 1.5em;
+      border-radius: 50%;
+      box-shadow: 0 0 8px rgba(0,0,0,0.2), 0 0 2px rgba(0,0,0,0.4);
+    }
+
+    [type=checkbox]:checked+.switch__toggle::before {
+      background: #FEC04F;
+      opacity: 0.8;
+    }
+
+    [type=checkbox]:checked+.switch__toggle::after {
+      transform: translate(100%, -50%);
+    }
+
+    [type=checkbox]:disabled+.switch__toggle {
+      cursor: not-allowed;
+      filter: grayscale(100%);
+      opacity: 0.6;
+    }
+
+    [type=checkbox]:disabled+.switch__toggle::after {
+      box-shadow: none;
+    }
+
+    [type=checkbox]:focus+.switch__toggle {
+      outline: 0;
+      border-radius:30px;
+      box-shadow: 0 0 0 0.2rem rgba(0, 45, 66, 0.25);
+    }
+
+    [type=checkbox] {
+      position: absolute;
+      opacity: 0;
+      pointer-events: none;
+    }
   }
 
   /* Search box */
@@ -174,6 +186,43 @@ button.switch {
           border-bottom-right-radius: 16px;
       }
   }
+
+.custom-control-label::before {
+    top:0.125rem;
+    width: 1.125rem;
+    height:1.125rem;
+    background-color: #f9f9f9;
+    box-shadow: inset 0 0.125rem 0.125rem rgba(0, 0, 0, 0.1);
+    border: 1px solid #96A8B2;
+  }
+
+.custom-checkbox {
+  .custom-control-label::after {
+    top:0.125rem;
+    width: 1.125rem;
+    height:1.125rem;
+    background-size: 78% 78%;
+  }
+}
+
+.custom-radio {
+  .custom-control-label::after {
+    top:0.125rem;
+    left:-1.5rem;
+    width: 1.125rem;
+    height:1.125rem;
+    background-size: 78% 78%;
+  }
+
+  .custom-control-input:checked ~ .custom-control-label::after {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3E%3Ccircle r='3' fill='%23002D42'/%3E%3C/svg%3E");
+  }
+
+  .custom-control-input:checked ~ .custom-control-label::before {
+    color:$primary;
+    background-color:transparent;
+  }
+}
 
 //Cards
 
@@ -360,6 +409,15 @@ a.dropdown-item {
     border-radius: 20px;
   }
 
+.badge-secondary {
+  color: #fff;
+  background-color: #4D5D6C;
+}
+
+.badge-info {
+  background-color:#245269;
+  color:#ffffff;
+}
 
   //Table
 
