Added small css change for better formatting

--- a/src/layouts/layout.scss
+++ b/src/layouts/layout.scss
@@ -44,6 +44,10 @@
   background:#467B8D;
 }
 
+.gatsby-highlight {
+  margin: 10px;
+}
+
 @media (max-width: 768px) {
   .doc-container {
       padding-left: 15px;
