--- a/src/utils/custom-variables.scss
+++ b/src/utils/custom-variables.scss
@@ -115,3 +115,8 @@ $link-color:#0278A4;
 //$theme-colors: (
 //  "cool": #4d3fa3
 //);
+
+$custom-file-text: (
+  en: "Browse",
+  fr: "Feuilleter"
+);
