Updated Grids and Spacing page, button components
- Created a new styling class for grid columns.
- Updated Grids and Spacing to include new style instead of buttons
- Matched codeblocks to new Grid examples
- Completed button component examples and HTML code blocks

--- a/src/layouts/layout.scss
+++ b/src/layouts/layout.scss
@@ -12,6 +12,13 @@
   overflow: auto;
 }
 
+.gr-example{
+    padding-top: .75rem;
+    padding-bottom: .75rem;
+    background: #CCCCCC;
+    border: 1px solid rgba(86,61,124,0.2);
+}
+
 .doc-container {
   max-width: 1250px;
   padding-left: 310px;
