steps progress bar

--- a/src/utils/custom-styles.scss
+++ b/src/utils/custom-styles.scss
@@ -258,6 +258,79 @@ button.switch {
   border-color: $success;
 }
 
+//step Indicator
+
+.step-indicator {
+      width: auto;
+      height:70px;
+      margin: 20px auto;
+      font-family: 'Rubik', sans-serif;
+      font-weight:400;
+
+  .steps {
+      counter-reset: step;
+      padding:0;
+  }
+  .steps li {
+      list-style-type: none;
+      width: 25%;
+      float: left;
+      font-size: 12px;
+      position: relative;
+      text-align: center;
+      text-transform: uppercase;
+      color: #666666;
+  }
+  .steps li a {
+      padding-top: 4rem;
+  }
+  .steps li:before {
+      width: 40px;
+      height: 40px;
+      content: counter(step);
+      counter-increment: step;
+      line-height: 32px;
+      border: 4px solid #6d6d6d;
+      display: block;
+      text-align: center;
+      margin: 0 auto 10px auto;
+      border-radius: 50%;
+      background-color: white;
+      font-size: 21px;
+  }
+  .steps li:after {
+      width: 100%;
+      height: 4px;
+      content: '';
+      position: absolute;
+      background-color: #7d7d7d;
+      top: 18px;
+      left: -50%;
+      z-index: -1;
+  }
+  .steps li:first-child:after {
+      content: none;
+  }
+  .steps li.complete {
+      color: #0278A4;
+  }
+  .steps li.complete:before {
+      border-color: #058abc;
+      content: "\2713";
+  }
+  .steps li.complete + li:after {
+      background-color: #058abc;
+  }
+
+  .steps li.active {
+    color: #0278A4;
+  }
+  .steps li.active:before {
+      border-color: #058abc;
+      box-shadow:0 0 0 0.2rem rgba(5, 138, 188, 0.25);
+  }
+}
+
 //Cards
 
 .card {
