--- a/src/utils/custom-styles.scss
+++ b/src/utils/custom-styles.scss
@@ -290,7 +290,7 @@ button.switch {
       content: counter(step);
       counter-increment: step;
       line-height: 32px;
-      border: 4px solid #6d6d6d;
+      border: 4px solid #CECECE;
       display: block;
       text-align: center;
       margin: 0 auto 10px auto;
@@ -303,7 +303,7 @@ button.switch {
       height: 4px;
       content: '';
       position: absolute;
-      background-color: #7d7d7d;
+      background-color: #CECECE;
       top: 18px;
       left: -50%;
       z-index: -1;
