--- a/src/utils/custom-styles.scss
+++ b/src/utils/custom-styles.scss
@@ -38,6 +38,23 @@
     background-color: $white;
 }
 
+.alert-danger-banner {
+  border:1px solid #923534;
+  background-color: $white;
+
+  p {
+    margin-bottom: .5rem;
+  }
+
+  ul {
+    padding-left: 1rem;
+  }
+
+  .alert-link {
+    color: #923534;
+  }
+}
+
 //Forms
 
 .form-control {
@@ -156,6 +173,26 @@ button.switch {
     }
   }
 
+  /* Custom file upload */
+
+.custom-file-label {
+  padding: 0.375rem 6.5rem;
+}
+
+.custom-file-label::after {
+  left:0;
+  right:auto;
+  border-left: none;
+  border-right: 1px solid #CCCCCC;
+  border-radius: $border-radius 0 0 $border-radius;
+  background-color:$primary;
+  color:white;
+}
+
+.custom-file-input:disabled ~ .custom-file-label::after {
+  opacity:0.55;
+}
+
   /* Search box */
 .search-form .form-control {
     padding-right: 40px;
@@ -221,6 +258,93 @@ button.switch {
   .custom-control-input:checked ~ .custom-control-label::before {
     color:$primary;
     background-color:transparent;
+  }
+}
+
+
+// custom checkbox/radio validation
+.was-validated .custom-control-input:invalid ~ .custom-control-label::before,
+.custom-control-input.is-invalid ~ .custom-control-label::before {
+  background-color: transparent;
+  border-color: $danger;
+}
+
+.was-validated .custom-control-input:valid ~ .custom-control-label::before,
+.custom-control-input.is-valid ~ .custom-control-label::before {
+  background-color: transparent;
+  border-color: $success;
+}
+
+//step Indicator
+
+.step-indicator {
+      width: auto;
+      height:70px;
+      margin: 20px auto;
+      font-family: 'Rubik', sans-serif;
+      font-weight:400;
+
+  .steps {
+      counter-reset: step;
+      padding:0;
+  }
+  .steps li {
+      list-style-type: none;
+      width: 25%;
+      float: left;
+      font-size: 12px;
+      position: relative;
+      text-align: center;
+      text-transform: uppercase;
+      color: #666666;
+  }
+  .steps li a {
+      padding-top: 4rem;
+  }
+  .steps li:before {
+      width: 40px;
+      height: 40px;
+      content: counter(step);
+      counter-increment: step;
+      line-height: 32px;
+      border: 4px solid #CECECE;
+      display: block;
+      text-align: center;
+      margin: 0 auto 10px auto;
+      border-radius: 50%;
+      background-color: white;
+      font-size: 21px;
+  }
+  .steps li:after {
+      width: 100%;
+      height: 4px;
+      content: '';
+      position: absolute;
+      background-color: #CECECE;
+      top: 18px;
+      left: -50%;
+      z-index: -1;
+  }
+  .steps li:first-child:after {
+      content: none;
+  }
+  .steps li.complete {
+      color: #0278A4;
+  }
+  .steps li.complete:before {
+      border-color: #058abc;
+      content: "\2713";
+  }
+  .steps li.complete + li:after {
+      background-color: #058abc;
+  }
+
+  .steps li.active {
+    color: #0278A4;
+  }
+  .steps li.active:before {
+      border-color: #058abc;
+      box-shadow:0 0 0 0.2rem rgba(5, 138, 188, 0.25);
   }
 }
 
@@ -312,6 +436,30 @@ a.dropdown-item {
 
 .breadcrumb {
   background-color: transparent;
+}
+
+//Nav pagination
+.pagination {
+
+  .page-link {
+    border:none;
+    background:transparent;
+    margin: 0 3px;
+    border-radius:$border-radius;
+  }
+
+  .page-item:first-child,
+  .page-item:last-child {
+    .page-link {
+        border:1px solid $primary;
+    }
+  }
+
+  .page-link:hover {
+    background-color: $primary;
+    color:white;
+  }
+
 }
 
 //Modals
