Refine badge variations

--- a/src/components/prism-css.css
+++ b/src/components/prism-css.css
@@ -52,8 +52,8 @@ pre[class*="language-"] {
 :not(pre) > code[class*="language-"] {
     padding: .2em;
     padding-top: 1px; padding-bottom: 1px;
-    background: #f8f8f8;
-    border: 1px solid #dddddd;
+    background: transparent;
+    color:#c60f5e;
 }
 
 .token.comment,
