--- a/src/utils/custom-variables.scss
+++ b/src/utils/custom-variables.scss
@@ -27,7 +27,7 @@ $border-radius-lg: .5rem;
 
 // Changing the theme colors
 $primary: #002D42;
-$secondary: #002D42;
+$secondary: #4D5D6C;
 $success: #278400;
 $info: #269abc;
 $warning: #ff9900;
