--- a/src/utils/custom-styles.scss
+++ b/src/utils/custom-styles.scss
@@ -13,6 +13,7 @@
       padding:0;
       position: relative;
       display: flex;
+      margin-bottom: 1rem;
       .icon {
           font-size: $font-size-lg;
           color: $white;
@@ -20,10 +21,25 @@
           width:50px;
           border-top-left-radius: 0.35rem;
           border-bottom-left-radius: 0.35rem;
+          display:flex;
+          align-items:center;
+          justify-content:center;
       }
       .message {
           padding: $alert-padding-y $alert-padding-x;
           flex: 1;
+          background:white;
+
+          h2, h3, h4, h5, h6 {
+            font-family: 'Nunito Sans', sans-serif;
+            font-weight:500;
+            font-size: 1.25em;
+            margin-bottom:0;
+          }
+
+          p {
+            margin-bottom:0.5em;
+          }
       }
       }
 
@@ -544,27 +560,45 @@ a.dropdown-item {
     top: 10px;
 }
 
-.badge-tag::after {
-    border-bottom: 13px solid transparent;
-    border-right: 10px solid $primary;
-    border-top: 13px solid transparent;
-    content: '';
-    position: absolute;
-    left: -8px;
-    top: 0;
-    width: 0;
-    height: 0;
-    border-radius: 20px;
+@each $color, $value in $theme-colors {
+  .badge-#{$color}.badge-tag::after {
+      border-bottom: 13px solid transparent;
+      border-right: 10px solid #{$value};
+      border-top: 13px solid transparent;
+      content: '';
+      position: absolute;
+      left: -8px;
+      top: 0;
+      width: 0;
+      height: 0;
+      border-radius: 20px;
+    }
+
+    a.badge-#{$color}.badge-tag:hover::after {
+      border-right-color: darken($value, 10%);
+    }
+}
+
+.badge-chip {
+  position:relative;
+  padding-left:30px;
+  height: auto;
+
+  img {
+    position:absolute;
+    top:-1px;
+    left:0;
+    width:26px;
+    height:26px;
   }
+}
 
 .badge-secondary {
   color: #fff;
-  background-color: #4D5D6C;
 }
 
 .badge-info {
-  background-color:#245269;
-  color:#ffffff;
+  color:#000000;
 }
 
   //Table
@@ -597,6 +631,32 @@ a.dropdown-item {
 
   .btn-secondary {
     @include button-outline-variant($primary);
+  }
+
+  //back to top Buttons
+  .btn-backtotop {
+    border: 1px solid #CECECE;
+    border-radius: 1.5rem;
+    box-shadow: $input-box-shadow;
+    color:#666666;
+    font-weight:600;
+
+    .icon {
+      margin-right: 5px;
+    }
+  }
+
+  .btn-backtotop:hover {
+    color:white;
+    background-color: $primary;
+  }
+
+  .btn-backtotop.mobile {
+    font-size: 1.45rem;
+
+    .icon {
+      margin:0;
+    }
   }
 
 /* ADDED FOR DS*/
