Layout and rebranding changes

--- a/src/layouts/layout.scss
+++ b/src/layouts/layout.scss
@@ -63,10 +63,10 @@
 }
 
 .hero-holder {
-  background-image: url(https://media.istockphoto.com/vectors/abstract-vector-background-technology-communication-concept-hitech-vector-id967027148);
-  background-size: cover;
+  background-image: url(https://png2.kisspng.com/sh/68fc92791a9d8a1feb27e779622b71f1/L0KzQYm3VMI2N5p1iZH0aYP2gLBuTgZma6V0ip92b3TofH72hr11cJYyeeZ4bT3zgrF7jB4ueaZmhuZAbT3wdbTvgf5qa6QyTdNuMEe7QLO6hsUxO2EzS6I8M0K7R4W4VcI1Pmc1SqUAMkW8Q3B3jvc=/kisspng-vector-model-of-the-atom-proton-quantum-mechanics-5ae0780b3f5030.3033287415246602352593.png);
+  background-size: 50%;
   background-repeat:no-repeat;
-  background-position: left top;
+  background-position: right bottom;
   height: 695px;
   padding: 70px 0px;
    /*
